@@ -3,4 +3,6 @@
 
 Kodi kiegészítő a Arena4Plus-hoz
 
+1.0.1 - os verzió kiszedése
+
 1.0.0 - Első verzió - Android-on nincs lejátszás
