@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.arena4plus" name="Arena4Plus" version="1.0.0" provider-name="heg, vargalex">
+<addon id="plugin.video.arena4plus" name="Arena4Plus" version="1.0.1" provider-name="heg, vargalex">
 	<requires>
 		<import addon="script.module.beautifulsoup4" version="4.6.2"/>
 		<import addon="script.module.requests" version="2.22.0"/>
@@ -16,6 +16,7 @@
 		<language>hu</language>
 		<platform>all</platform>
 		<news> 
+			1.0.1 - os verzió kiszedése
 			1.0.0 - Első verzió - Android-on nincs lejátszás
 		</news>
 		<assets>
