@@ -1,2 +1,4 @@
+[B]1.0.1[/B]
+- os verzió kiszedése
 [B]1.0.0[/B]
 - Első verzió - Android-on nincs lejátszás
